--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
   
   
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script >
+
+        const clock = document.querySelector('#clock');
+
+
+                setInterval(function() {
+                  let date = new Date();
+                clock.innerHTML = date.toLocaleTimeString()
+              },1000)
+
+
+
+
+    </script>
   </body>
 </html>
 
