--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <title>Change</title>
+    <title>Digital Clock</title>
     <style>
    
 
